# webatelier-canvas

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
docs/: ACTION_PLAN.md  AI_APPROVAL_FLOW.md  ARCHITECTURE.md  DEFINITION_OF_DONE.md  DEVELOPMENT_GOVERNANCE.md  EXPORT_PACKAGES.md  JS_HUB.md  LOCAL_FIRST_AND_WEBSERVICE.md  LOCAL_PROJECTS.md  PATCH_DELIVERY.md  PRD.md  QA_GLOBAL_SELECTION.md  QA_PLAN.md  QA_TABBED_PANEL.md  REFERENCES.md  SESSIONS.md  SPECS.md  SPRINT.md  SPRINTS.md  THREAT_MODEL.md  UI_DIRECTION.md  WINDOWS_SETUP.md
docs/ADR/: 0001-local-first.md  0002-playwright-binding.md  0003-patch-language.md
docs/issues/: 001-bootstrap-foundation.md  002-selection-hardening.md  003-smart-guides.md  004-property-panel.md  005-ai-preview.md  006-patch-export.md  007-e2e.md  008-css-exporter.md  009-local-daemon.md  010-webservice-gate.md
editor-runtime/: package-lock.json  package.json  tsconfig.json  vite.config.ts
editor-runtime/src/: main.ts  styles.css
examples/demo/: index.html
scripts/: bootstrap.ps1  check-runtime-extensions.mjs  publish-roadmap-issues.ps1  run-demo.ps1  validate.ps1
src/webdesign_ai_editor/: __init__.py  __main__.py  cli.py  config.py  export_cli.py  local_demo.py  project_cli.py
src/webdesign_ai_editor/adapters/: browser_host.py  enhancement_loader.py  json_project_repository.py  jsonl_patch_repository.py  ollama.py  project_metadata_repository.py
src/webdesign_ai_editor/api/: __init__.py  app.py  metadata.py  projects.py
src/webdesign_ai_editor/domain/: __init__.py  export_models.py  models.py  ports.py  project_metadata.py  projects.py
src/webdesign_ai_editor/services/: edit_service.py  exporter.py  projects.py  prompting.py
src/webdesign_ai_editor/static/: __init__.py  editor-enhancements.js  editor-extension-ai-preview.js  editor-runtime.js  (+34 more)
tests/: conftest.py  test_api.py  test_browser_host.py  test_cli.py  test_domain_models.py  test_element_insertion_models.py  test_export_api.py  test_exporter.py  test_js_hub_security.py  test_jsonl_patch_repository.py  test_local_demo.py  test_ollama.py  test_patch_session_api.py  test_project_metadata.py  test_projects.py  test_projects_api.py  test_prompting.py
