[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "webdesign-ai-editor"
version = "0.1.0"
description = "Local-first visual editor for real web pages with Playwright and Ollama/Gemma"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Carlos Silva" },
]
keywords = ["playwright", "webdesign", "visual-editor", "ollama", "gemma", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "platformdirs>=4.3,<5",
  "playwright>=1.50,<2",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "rich>=13.9,<16",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
wda = "webdesign_ai_editor.cli:app"

[project.urls]
Repository = "https://github.com/selvalabs/webdesign-ai-editor"
Issues = "https://github.com/selvalabs/webdesign-ai-editor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/webdesign_ai_editor"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/uv.lock",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "ASYNC",
  "RUF",
]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["webdesign_ai_editor"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["webdesign_ai_editor"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["webdesign_ai_editor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.18",
]
